# event-recommender

./: .env.example  .gitignore  AGENTS.md  DEMO.md  README.md  pyproject.toml
src/event_scheduler/: __init__.py  api.py  config.py  db.py  models.py  scheduler.py  webapp.py
src/event_scheduler/agents/: __init__.py  base.py  delivery.py  ingest.py  parser.py  recommender.py
src/event_scheduler/migrations/: 001_initial.sql
src/event_scheduler/scripts/: oauth_setup.py  run_agent.py  seed_preferences.py
src/event_scheduler/services/: calendar.py  llm.py  nimble.py  preferences.py
